# native-camera

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/eu/sisik/cam/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cam_utils.cpp  cam_utils.h  gl_helper.cpp  gl_helper.h  log.h  native-lib.cpp
app/src/main/java/eu/sisik/cam/: CamRenderer.kt  CamSurfaceView.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/eu/sisik/cam/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
